--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "laravel/framework": "^8.0"
+        "laravel/framework": "^7.0 || ^8.0"
     }
 }
